<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestMarch2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="submit_button">Submit and Continue to First Stop</string>
    <string name="insert_truck_number">Insert Truck #</string>
    <string name="insert_trailer_number">Insert Trailer #</string>
    <string name="insert_start_of_shift_time">Insert Start of Shift Time</string>
    <string name="insert_delran_departure_time">Insert Initial Delran Departure Time</string>
    <string name="title_activity_first_stop">FirstStop</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="insert_login">Insert Username</string>
    <string name="username">Username:</string>
    <string name="insert_username">Insert Username!</string>
    <string name="password">Password:</string>
    <string name="insert_password">Insert Password!</string>
    <string name="login">Login</string>
    <string name="stop_1">Stop #1</string>
    <string name="click_upon_arrival_first">Click Upon Arrival to 1st Stop</string>
    <string name="click_first_departure">Click Upon Departure of 1st Stop</string>
    <string name="if_you_dropped_trailer">IF YOU DROPPED A TRAILER, ENTER NEW TRAILER NUMBER HERE</string>
    <string name="insert_new_trailer_number">Insert New Trailer #</string>
    <string name="title_activity_second_stop">SecondStop</string>
    <string name="stop_2">Stop #2 or Delran</string>
    <string name="click_upon_arrival_second">Click Upon Arrival to 2nd Stop</string>
    <string name="click_second_departure">Click Upon Departure of 2nd Stop</string>
    <string name="click_back_in_delran">Click Upon Arrival to CTX Delran</string>
    <string name="end_shift">End Shift</string>
    <string name="truck_number_id">TRUCK NUMBER:</string>
    <string name="trailer_number_id">TRAILER NUMBER:</string>
    <string name="arrival_time_submitted">Arrival Time Submitted!</string>
    <string name="departure_time_submitted">Departure Time Submitted!</string>
    <string name="ended_shift_submitted">Shift Ended!</string>
    <string name="or_text">OR</string>
    <string name="title_activity_back_in_delran">BackInDelran</string>
    <string name="submit_button_continue_next_stop">Submit and Continue to Next Stop</string>
    <string name="add_notes_for_dispatchers_here">ADD ANY EXTRA NOTES FOR DISPATCHERS HERE....</string>
    <string name="insert_truck_mileage">Insert Truck Mileage</string>
    <string name="user">USER:</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login44">Login44</string>
    <string name="register">Register</string>
    <string name="title_activity_main_activity2">MainActivity2</string>

</resources>
