<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jb.jb.testmarch2.SecondStop">


    <TextView
        android:text="@string/stop_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:textSize="25dp"
        android:gravity="center_horizontal"
        android:id="@+id/stop1"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/ctx2"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_upon_arrival_second"
        android:id="@+id/arrivedFirstStop"
        android:layout_marginTop="31dp"
        android:gravity="center"
        android:textSize="17dp"
        android:layout_below="@+id/stop1"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_second_departure"
        android:id="@+id/departedSecondStop"
        android:gravity="center"
        android:textSize="17dp"
        android:layout_below="@+id/enterTrailerEditText"
        android:layout_alignRight="@+id/backInDelranButton"
        android:layout_alignEnd="@+id/backInDelranButton"
        android:layout_marginTop="44dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:layout_toLeftOf="@+id/arrivedFirstStop"
        android:layout_alignBaseline="@+id/arrivedFirstStop"
        android:layout_alignBottom="@+id/arrivedFirstStop"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enterTrailerEditText"
        android:gravity="center_horizontal"
        android:hint="@string/if_you_dropped_trailer"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/backInDelranButton"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_back_in_delran"
        android:id="@+id/backInDelranButton"
        android:textSize="17dp"
        android:layout_toEndOf="@+id/checkBox"
        android:layout_below="@+id/orTextView"
        android:layout_alignRight="@+id/arrivedFirstStop"
        android:layout_alignEnd="@+id/arrivedFirstStop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/truck_number_id"
        android:id="@+id/truckNum"
        android:layout_below="@+id/userIdStop2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="-------------"
        android:id="@+id/truckNumID"
        android:layout_below="@+id/truckNum"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/trailer_number_id"
        android:id="@+id/trailerNum"
        android:layout_below="@+id/truckNumID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="-------------"
        android:id="@+id/trailerNumID"
        android:layout_below="@+id/trailerNum"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/or_text"
        android:id="@+id/orTextView"
        android:layout_below="@+id/arrivedFirstStop"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/notes"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/departedSecondStop"
        android:hint="@string/add_notes_for_dispatchers_here"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/user"
        android:id="@+id/userStop2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="-------------"
        android:id="@+id/userIdStop2"
        android:layout_below="@+id/userStop2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/darker_gray"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox2"
        android:layout_toEndOf="@+id/userStop2"
        android:layout_toRightOf="@+id/userStop2"
        android:layout_toStartOf="@+id/backInDelranButton"
        android:layout_toLeftOf="@+id/backInDelranButton"
        android:layout_above="@+id/enterTrailerEditText"
        android:layout_alignLeft="@+id/checkBox"
        android:layout_alignStart="@+id/checkBox"
        android:paddingBottom="35dp"/>

</RelativeLayout>
